# ComputerSimulationAssignments

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.py  pyproject.toml
u1/: base.py  distributions.py  task1.py  task2.py  task3.py  task4.py
u2/: task1.py
u3/: CMakeLists.txt  Grid.cpp  Grid.h  multithreaded.cpp  run.cpp  task1.py  visualise.cpp
u4/: CMakeLists.txt  Landscape.cpp  Landscape.h  Simulator.cpp  Simulator.h  city-positions.txt  gui.cpp  run.cpp  task1.py
u5/: Box.h  task1.py
